# docx-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-05-09-feature-expansion-v2.md  2026-05-14-security-hardening-design.md  2026-05-14-security-hardening.md
docs/superpowers/plans/: 2026-03-23-feature-expansion.md
docs/superpowers/specs/: 2026-03-23-competitive-analysis.md  2026-03-23-create-document-design.md  2026-03-23-feature-expansion-design.md  2026-03-23-feature-expansion-review.md
docx_mcp/: __init__.py  __main__.py  cli.py  document.py  markdown.py  server.py  typography.py
docx_mcp/document/: __init__.py  accessibility.py  base.py  bookmarks.py  captions.py  charts.py  clausediff.py  comments.py  compare.py  contentcontrols.py  creation.py  endnotes.py  equations.py  errors.py  fields.py  footnotes.py  formatting.py  guards.py  headers_footers.py  hyperlinks.py  images.py  lists.py  litigation.py  markdown_export.py  merge.py  metadata.py  pdfexport.py  pii.py  properties.py  protection.py  query.py  rawparts.py  reading.py  references.py  reviewmerge.py  revisions.py  sections.py  sessionlog.py  splitting.py  statistics.py  (+8 more)
sessions/: 2026-03-23-feature-expansion.md
skill/: SKILL.md
tests/: conftest.py  test_accept_reject.py  test_accessibility.py  test_advanced_fields.py  test_anchor.py  test_block_elements.py  test_bookmarks.py  test_charts.py  test_clausediff.py  test_comment_crud.py  test_compare.py  test_content.py  test_content_control_crud.py  test_contentcontrols.py  test_creation.py  test_custom_properties.py  test_document_meta.py  test_document_operations.py  test_e2e.py  test_equations.py  test_errors.py  test_field_operations.py  test_fields.py  test_find_replace_formatted.py  test_floating_image.py  test_footnote_endnote_crud.py  test_fuzz_smoke.py  test_header_footer_settings.py  test_hyperlinks.py  test_image_borders.py  test_image_management.py  test_list_management.py  test_litigation.py  test_markdown.py  test_markdown_export.py  test_metadata.py  test_mike_integration.py  test_multilevel_list.py  test_ooxml_norm.py  test_page_setup.py  (+37 more)
tests/fixtures/: README.md  real_hyperlinks_footnotes.docx  real_tracked_changes.docx
tests/fuzz/: fuzz_open.py
tests/fuzz/corpus/: minimal.docx
