[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docx-mcp"
version = "0.1.0"
description = "MCP server for reading and editing Word (.docx) documents with track changes, comments, footnotes, and structural validation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "h4x0r" }]
keywords = ["mcp", "docx", "word", "track-changes", "comments", "footnotes", "ooxml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "mcp>=1.0.0",
    "lxml>=4.9.0",
]

[project.scripts]
docx-mcp = "docx_mcp.server:main"

[project.urls]
Homepage = "https://github.com/h4x0r/docx-mcp"
Repository = "https://github.com/h4x0r/docx-mcp"
Issues = "https://github.com/h4x0r/docx-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["docx_mcp"]
